# agentRobot

./: .gitignore  README.md
agentic/: .gitignore  BENCHMARK_VERIFIED.md  MANISKILL_VERIFIED.md  OVERVIEW.md  PI_ALL_LIBERO.md  POLICY_COVERAGE_vs_LEROBOT.md  README.md  ROBOTWIN_VERIFIED.md
agentic/policy_websocket/: .gitignore  README.md  pyproject.toml
agentic/policy_websocket/docs/: policy_client.md  policy_server.md
agentic/policy_websocket/examples/: policy_client.py  policy_server.py  policy_server_ac.py
agentic/policy_websocket/src/policy_websocket/: __init__.py  action_checker.py  action_chunk_broker.py  base_policy.py  eval_preflight.py  eval_registry.py  msgpack_numpy.py  websocket_client.py  websocket_server.py
logs/: _bench_act_robotwin_beat_block_hammer.sh  _bench_all_libero.sh  _bench_all_v2.sh  _bench_dp_robotwin_beat_block_hammer.sh  _bench_matrix.sh  _bench_mega.sh  _bench_octo_maniskill_PegInsertionSide-v1.sh  _bench_octo_maniskill_PickCube-v1.sh  _bench_octo_maniskill_PickSingleYCB-v1.sh  _bench_octo_maniskill_PullCube-v1.sh  _bench_octo_maniskill_PushCube-v1.sh  _bench_octo_maniskill_StackCube-v1.sh  _bench_octo_maniskill_multitask.sh  _bench_octo_spatial.sh  _bench_openpi_maniskill_PickCube-v1.sh  _bench_openpi_maniskill_PullCube-v1.sh  _bench_openpi_maniskill_PushCube-v1.sh  _bench_openpi_maniskill_StackCube-v1.sh  _bench_openpi_robocasa_PnPCounterToCab.sh  _bench_openvla_10.sh  _bench_openvla_goal.sh  _bench_openvla_goal_10.sh  _bench_openvla_libero_10.sh  _bench_openvla_libero_goal.sh  _bench_openvla_libero_object.sh  (+98 more)
(+100 files in other folders)
