[project]
name = "policy-websocket"
version = "0.1.0"
description = "WebSocket-based policy client/server for robot learning"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "websockets>=11.0",
    "msgpack>=1.0.5",
    "numpy>=1.22.4,<2.0.0",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/YufengJin/policy_websocket"
Repository = "https://github.com/YufengJin/policy_websocket"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/policy_websocket"]
